--- a/urly-front-end/package.json
+++ b/urly-front-end/package.json
@@ -20,7 +20,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:update": "react-scripts test --updateSnapshot"
   },
   "eslintConfig": {
     "extends": [
@@ -41,8 +42,11 @@
     ]
   },
   "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "autoprefixer": "^9.8.8",
+    "enzyme": "^3.11.0",
     "postcss": "^7.0.39",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
